Completed MongoDB Atlas cluster setup & added leaderboard UI

--- a/client/index.html
+++ b/client/index.html
@@ -21,12 +21,12 @@
                     <span id="scoreValue">0</span>
                 </div>
                 
-                <a href="profile.html">
-                    <button id="viewProfile" class="ui-element">
-                        👤 My Profile
-                    </button>
+                <a href="profile.html" id="viewProfile" class="ui-element">
+                    📊 Stats
                 </a>
                 
+                <div id="leaderboard"></div>
+
                 <div id="gameOverlay">
                     <div class="start-message">
                         Press SPACE to Start Flying!
